--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,12 @@
     "cSpell.words": [
         "curr",
         "elegiver",
+        "Freekick",
         "gcal",
         "Idesof",
         "minfinal",
-        "Superincreasing"
+        "onecounter",
+        "Superincreasing",
+        "twocounter"
     ]
 }
